02/src-02/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task02-frontend
  labels:
    app: task02-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task02-frontend
  template:
    metadata:
      labels:
        app: task02-frontend
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - name: http
              protocol: TCP
              containerPort: 80
            - name: https
              protocol: TCP
              containerPort: 443
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
