02/src-02/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: task02-backend
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    app: task02-backend
  type: ClusterIP
