02/src-02/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: task02-frontend
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  selector:
    app: task02-frontend
  type: ClusterIP
