02/src-02/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task02
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: task02.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task02-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: task02-backend
                port:
                  number: 8080
